Git: Update Meta-data for local pip install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "NARMAX"
-version = "0.1.0"
-description = "Machine learning library for symbolic fitting"
-authors = [{name = "Sté Thunus", email = "144615547+Stee-T@users.noreply.github.com"}]
+version = "0.14"
+description = "Machine learning library for NARMAX symbolic fitting"
+authors = [{name = "Stéphane Thunus", email = "144615547+Stee-T@users.noreply.github.com"}]
 dependencies = [
     "numpy",
     "scipy",
@@ -16,7 +16,7 @@ dependencies = [
     "torch"
 ]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 
 [project.optional-dependencies]
 dev = []
